--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ToDo App  </title>
+		<title>To-do View  </title>
 
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
