--- a/calendarMod/templates/calendar/index.html
+++ b/calendarMod/templates/calendar/index.html
@@ -1,18 +1,59 @@
-<!-- api key AIzaSyBCBOTV6WEVNtHjOycaI5mbpCd_Fmqzd4U -->
-Test
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
+
+<div class = "container">
+
+<p>Here are your upcoming events:</p>
+
+<div class="container">
+    <div class="row">
+
+
+        <div class="col-sm" style="width: 100;">
+            {% if event.exists %}
+            Event title<br>
+            {% endif %}
+            <ul>
+                {% for i in event %}
+                <p>{{ i.title }} </p>
+
+                {% endfor %}
+
+            </ul>
+        </div>
+
+        <div class="col-sm" style="width: 100;">
+            {% if event.exists %}
+            Start Date<br>
+            {% endif %}
+            <ul>
+                {% for i in event %}
+                <p> {{ i.start_month_name }} {{ i.start_time.day }}, {{ i.start_time.hour}}:{{i.startminute}} </p>
+                    
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-sm" style="width: 100;">
+            {% if event.exists %}
+            End Date<br>
+            {% endif %}
+            <ul>
+                {% for i in event %}
+                <p> {{ i.start_month_name }} {{ i.end_time.day }}, {{ i.end_time.hour}}:{{i.endminute}} </p>
+                    
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 <form action="{% url 'events' %}" method="post">
     {% csrf_token %}
         <button class="btn btn-primary btn-sm" type="submit">View events</button>
-    </div>
+   
 </form>
-<p>Here are your upcoming events:</p>
-{% for i in eventlist%}
-<p>{% for details in i %}
-{{ details }}
-{%endfor%}
-</p>
-{%endfor%}
-
 <a href="{% url 'calendar' %}" >View calendar</a>
-    
+</div>
