--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -26,13 +26,14 @@
 							<div class="card px-3">
 								<div class="card-body">
 									<h4 class="card-title">Todo list</h4>
-									
+
 										<form action="{% url 'add' %}" method="POST" role="form">
 											{% csrf_token %}
 											<div class="form-group">
 												<div class="input-group">
 												  {{ form.text }}
 													{{form.date}}
+													{{form.group}}
 												  <span class="input-group-btn">
 													  <button type="submit" class="add btn btn-primary font-weight-bold todo-list-add-btn">ADD</button>
 													  <div class="btn-group">
@@ -56,9 +57,9 @@
 											</li>
 						{% for todo in todo_list %}
 							{% if todo.complete %}
-							<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} Done</li>
+							<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
 							{% else %}
-							<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }}</li></a>
+							<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
 							{% endif %}
 						{% endfor %}
 										</ul>
@@ -72,7 +73,7 @@
 			</div>
 
 
-			
+
 				{% else %}
         		<h1>Please log in to see your Personal Dashboard</h1>
         		<a href="{% url 'social:begin' 'google-oauth2' %}">
