--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -50,18 +50,81 @@
 											</div>
 										</form>
 
+									<div class="card-group">
+										<div class="card text-center" style="width: 18rem;">
+											<div class="card-header">
+												School
+											  </div>
+											{% for todo in todo_list %}
+												{% if todo.group == "school" %}
+													{% if todo.complete %}
+													<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
+													{% else %}
+													<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
+													{% endif %}
+												{% endif %}
+											{% endfor %}
+										</div>
+
+										<div class="card text-center" style="width: 18rem;">
+											<div class="card-header">
+												Leisure
+											  </div>
+											{% for todo in todo_list %}
+												{% if todo.group == "leisure" %}
+													{% if todo.complete %}
+													<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
+													{% else %}
+													<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
+													{% endif %}
+												{% endif %}
+											{% endfor %}
+										</div>
+
+										<div class="card text-center" style="width: 18rem;">
+											<div class="card-header">
+												Financial
+											  </div>
+											{% for todo in todo_list %}
+												{% if todo.group == "financial" %}
+													{% if todo.complete %}
+													<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
+													{% else %}
+													<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
+													{% endif %}
+												{% endif %}
+											{% endfor %}
+										</div>
+
+										<div class="card text-center" style="width: 18rem;">
+											<div class="card-header">
+												Miscellaneous
+											  </div>
+												{% for todo in todo_list %}
+													{% if todo.group == "misc" %}
+														{% if todo.complete %}
+														<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
+														{% else %}
+														<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
+														{% endif %}
+													{% endif %}
+												{% endfor %}
+											</div>
+									  </div>
+
 									<div class="list-wrapper">
 										<ul class="d-flex flex-column-reverse todo-list">
 											<li>
 												<div class="form-check list-group t20"> <label class="form-check-label"> <input class="checkbox" type="checkbox"> For what reason would it be advisable. <i class="input-helper"></i></label> </div> <i class="remove mdi mdi-close-circle-outline"></i>
 											</li>
-						{% for todo in todo_list %}
-							{% if todo.complete %}
-							<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}Done</li>
-							{% else %}
-							<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} -- {{ todo.text }} -- {{todo.group}}</li></a>
-							{% endif %}
-						{% endfor %}
+
+<!--						{% for todo in todo_list %}-->
+<!--							{% if todo.complete %}-->
+<!--							<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed form-check list-group t20">{{todo.due_date}} &#45;&#45; {{ todo.text }} &#45;&#45; {{todo.group}}Done</li>-->
+<!--							{% else %}-->
+<!--							<a href="{% url 'complete' todo.id %}"><li class="list-group-item form-check list-group t20">{{todo.due_date}} &#45;&#45; {{ todo.text }} &#45;&#45; {{todo.group}}</li></a>-->
+<!--							{% endif %}-->
+<!--						{% endfor %}-->
 										</ul>
 									</div>
 								</div>
