added viewing of multiple calendars

--- a/calendarMod/templates/calendar/base.html
+++ b/calendarMod/templates/calendar/base.html
@@ -1,5 +1,5 @@
 <!-- cal/templates/cal/base.html -->
-
+<!-- tutorial followed by https://www.huiwenteo.com/normal/2018/07/29/django-calendar-ii.html -->
 
 <!doctype html>
 <html lang="en">
