--- a/calendarMod/templates/calendar/calendar.html
+++ b/calendarMod/templates/calendar/calendar.html
@@ -1,5 +1,5 @@
 <!-- cal/templates/cal/calendar.html -->
-
+<!-- tutorial followed by https://www.huiwenteo.com/normal/2018/07/29/django-calendar-ii.html -->
 {% extends 'calendar/base.html' %}
 
 {% block content %}
