got the calendar view to work

--- a/calendarMod/templates/calendar/base.html
+++ b/calendarMod/templates/calendar/base.html
@@ -15,7 +15,24 @@
   <title>Django Calendar App</title>
 </head>
 <style>
-    
+    .left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.btn {
+  outline: none;
+  color: black;
+  background-color: transparent;
+  box-shadow: 0 0 0 0;
+}
+
+.clearfix {
+  margin: 15px;
+}
 .calendar {
   width: 98%;
   margin: auto;
