--- a/calendarMod/templates/calendar/calendar.html
+++ b/calendarMod/templates/calendar/calendar.html
@@ -4,5 +4,9 @@
 
 {% block content %}
 {% csrf_token %}
+<div class="clearfix">
+	<a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"> Previous Month </a>
+	<a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }}"> Next Month </a>
+</div>
 {{ calendar }}
 {% endblock %}
