added editing options

--- a/calendarMod/templates/calendar/base.html
+++ b/calendarMod/templates/calendar/base.html
@@ -15,10 +15,25 @@
   <title>Django Calendar App</title>
 </head>
 <style>
+  .form {
+  margin: auto;
+}
+
+.form input, .form select, .form textarea {
+  border-radius: 5px;
+  border: 1px solid #17a2b8;
+  outline: none;
+  background: none;
+  padding: 5px;
+  width: 100%;
+}
     .left {
   float: left;
 }
-
+.middle{
+  margin-left: auto;
+  margin-right: auto;
+}
 .right {
   float: right;
 }
@@ -32,6 +47,7 @@
 
 .clearfix {
   margin: 15px;
+  display: flex;
 }
 .calendar {
   width: 98%;
