--- a/calendarMod/templates/calendar/event.html
+++ b/calendarMod/templates/calendar/event.html
@@ -6,7 +6,7 @@ Event
 
 {% block content %}
 <div class="clearfix">
-  <a class="btn btn-info left" href="{'% url 'cal:calendar' %}"> Calendar </a>
+  <a class="btn btn-info left" href="{% url 'index2' %}"> Calendar </a>
 </div>
 
 <form method="post">
