--- a/calendarMod/templates/calendar/index.html
+++ b/calendarMod/templates/calendar/index.html
@@ -3,7 +3,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 <div class = "container">
 
@@ -43,7 +43,9 @@
             {% endif %}
             <ul>
                 {% for i in event %}
-                <p> {{ i.start_month_name }} {{ i.end_time.day }}, {{ i.end_time.hour}}:{{i.endminute}}, {{ i.end_time.year }} </p>
+                <p> {{ i.start_month_name }} {{ i.end_time.day }}, {{ i.end_time.hour}}:{{i.endminute}}, {{ i.end_time.year }} <a
+                    href="{% url 'delete_event' event_id=i.id %}"><i
+                        class="fa fa-trash"></i></a></p> </p>
                     
                 {% endfor %}
             </ul>
@@ -57,5 +59,7 @@ Get upcoming events from your currently selected calendars on Google Calendar!
         <button class="btn btn-primary btn-sm" type="submit">View events</button>
    
 </form>
+<a href = "{% url 'new_event' %}">Create new Event</a> <br>
+<a href = "{% url 'delete_all' %}"> Delete All</a> <br>
 <a href="{% url 'calendar' %}" >View calendar</a>
 </div>
