--- a/calendarMod/templates/calendar/index.html
+++ b/calendarMod/templates/calendar/index.html
@@ -6,7 +6,7 @@
 
 
 <div class = "container">
-
+{% if user.is_authenticated %}
 <p>Here are your upcoming events:</p>
 
 <div class="container">
@@ -57,4 +57,11 @@
    
 </form>
 <a href="{% url 'calendar' %}" >View calendar</a>
+
+            {% else %}
+        <h1>Please log in to see your Personal Dashboard</h1>
+        <a href="{% url 'social:begin' 'google-oauth2' %}">
+                Login
+                </a>
+        {% endif %}
 </div>
